- Bug Fix: If subtitles are shown in comment areas, we'll hide them by default. - Bug Fix: Better security for nonce checking after update to the WordPress VIP Coding Standards. See [this discussion](https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards/issues/190) for more information. - Extra: Wrap primary entry title parts in spans that theme authors can take advantage of for more fine-grained styling when a post has a subtitle. - Extra: French (fr_FR) language packs added (see [issue](https://github.com/philiparthurmoore/Subtitles/pull/18)).
git-svn-id: https://plugins.svn.wordpress.org/subtitles/trunk@944223 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/public/assets/css/subtitles.css
+++ b/public/assets/css/subtitles.css
@@ -4,7 +4,7 @@
  * Description: Easily add subtitles into your WordPress posts, pages, custom post types, and themes.
  * Author: Philip Arthur Moore
  * Author URI: https://philiparthurmoore.com/
- * Version: 1.0.0
+ * Version: 1.0.5
  * License: GNU General Public License v2 or later
  * License URI: http://www.gnu.org/licenses/gpl-2.0.html
  */
@@ -21,4 +21,13 @@
 span.entry-subtitle {
 	display: block; /* Put subtitles on their own line by default. */
 	font-size: 0.53333333333333em; /* Sensible scaling. It's assumed that post titles will be wrapped in heading tags. */
+}
+/**
+ * If subtitles are shown in comment areas, we'll hide them by default.
+ *
+ * @since 1.0.5
+ */
+#comments .comments-title span.entry-subtitle {
+	display: none;
+	font-size: 1em;
 }
